Time: 2 ms (95.16%) | Memory: 46.1 MB (18.74%) - LeetSync